# balboa

./: .gitignore  .travis.yml  CMakeLists.txt  Cargo.toml  LICENSE  README.md  requirements.txt  setup  test.sh
.github/workflows/: test.yml
api/: aoeval.h  aoeval.py  balboa.h  balboa.py
balboa/: CMakeLists.txt  Main.cpp  ao_vector.cpp  generate.py
cmake/: autocmake.yml
cmake/autocmake/: interpolate.py
cmake/custom/: autogenerated.cmake  parameters.cmake  test.cmake
src/: AOBatch.cpp  AOBatch.h  Basis.cpp  Basis.h  CMakeLists.txt  Main.cpp  Main.h  ao.rs  ao_vector.cpp  ao_vector.h  basis.rs  density.rs  diff.rs  example.rs  generate.py  generate.rs  lib.rs  limits.rs  main.rs  multiply.rs  point.rs  random.rs  transform.rs
test/: coordinates.txt  grid.txt  result.txt  test.py  test.txt
tests/: integration_test.rs  reference.txt
