[package]
name = "balboa"
version = "0.1.0"
authors = ["Radovan Bast <bast@users.noreply.github.com>"]
description = "Balboa computes Gaussian basis functions and their derivatives."
license = "MPL-2.0"
edition = "2018"
readme = "README.md"
homepage = "https://github.com/bast/balboa"

[dependencies]
rand = "0.7.2"
